# first_poetry

./: pyproject.toml
tmp/: pyproject.toml
tmp/scripts/: say_hello.py
