[tool.poetry]
name = "tmp"
version = "0.1.0"
description = ""
authors = ["Aidana <a19071997@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
tree = "^0.2.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
